--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ authors = ["Apoorv Sadana <@apoorvsadana>"]
 
 [dependencies]
 alloy = { git = "https://github.com/alloy-rs/alloy", rev = "86027c9bb984f3a12a30ffd2a3c5f2f06595f1d6", features = [
-  "providers",
-  "rpc-client",
-  "transport-http",
+    "providers",
+    "rpc-client",
+    "transport-http",
 ], optional = true }
 async-trait = "0.1.77"
 axum = { version = "0.7.4", features = ["macros"] }
@@ -26,11 +26,18 @@ serde = { version = "1.0.197" }
 serde_json = "1.0.114"
 starknet = "0.9.0"
 thiserror = "1.0.57"
-tokio = { version = "1.36.0", features = ["sync", "macros", "rt-multi-thread"] }
+tokio = { version = "1.36.0", features = [
+    "sync",
+    "macros",
+    "rt-multi-thread",
+    "parking_lot",
+] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 url = "2.5.0"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
+parking_lot = "0.12"
+slab = "0.4"
 
 [features]
 default = ["ethereum", "with_mongdb", "with_sqs"]
