--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,10 @@ authors = ["Apoorv Sadana <@apoorvsadana>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace.dependencies]
+num = { version = "0.4.1" }
+ethereum-da-client = { path = "crates/da_clients/ethereum" }
 async-trait = { version = "0.1.77" }
+da-client-interface = { path = "crates/da_clients/da-client-interface" }
 axum = { version = "0.7.4" }
 axum-macros = { version = "0.4.1" }
 color-eyre = { version = "0.6.2" }
@@ -33,6 +36,7 @@ tracing = { version = "0.1.40" }
 tracing-subscriber = { version = "0.3.18" }
 url = { version = "2.5.0" }
 uuid = { version = "1.7.0" }
-da-client-interface = { path = "crates/da_clients/da-client-interface" }
-ethereum-da-client = { path = "crates/da_clients/ethereum" }
+num-bigint = { version = "0.4.4" }
 utils = { path = "crates/utils" }
+num-traits = "0.2"
+lazy_static = "1.4.0"
