Feature: implement register proof job
This is my current status on this issue, and want to check If I am on the right track.

- Implement register proof job
- Add register_proof method on trait
- Add tests

--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -33,6 +33,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 url = { workspace = true }
 uuid = { workspace = true, features = ["v4", "serde"] }
+reqwest = { version = "0.11", features = ["blocking"] }
 
 [features]
 default = ["ethereum", "with_mongodb", "with_sqs"]
