--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,4 @@ httpmock = { version = "0.7.0" }
 da-client-interface = { path = "crates/da_clients/da-client-interface" }
 ethereum-da-client = { path = "crates/da_clients/ethereum" }
 utils = { path = "crates/utils" }
+arc-swap = { version = "1.7.1" }
