--- a/crates/da_clients/ethereum/Cargo.toml
+++ b/crates/da_clients/ethereum/Cargo.toml
@@ -20,6 +20,8 @@ da-client-interface = { workspace = true }
 reqwest = { version = "0.12.3" }
 c-kzg = "1.0.0"
 dotenv = "0.15"
+mockall = "0.12.1"
+serde = { version = "1.0.196", default-features = false, features = ["derive"] }
 starknet = { workspace = true }
 url = { workspace = true }
 utils = { workspace = true }
