feat(state_update_job): Init work

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ members = [
   "crates/prover-services/sharp-service",
   "crates/utils",
   "crates/settlement-clients/settlement-client-interface",
+  "crates/settlement-clients/ethereum",
+  "crates/settlement-clients/starknet",
   "e2e-tests",
 ]
 
@@ -72,6 +74,11 @@ madara-prover-rpc-client = { git = "https://github.com/Moonsong-Labs/madara-prov
 # Project
 da-client-interface = { path = "crates/da-clients/da-client-interface" }
 ethereum-da-client = { path = "crates/da-clients/ethereum" }
+
+settlement-client-interface = { path = "crates/settlement-clients/settlement-client-interface" }
+ethereum-settlement-client = { path = "crates/settlement-clients/ethereum" }
+starknet-settlement-client = { path = "crates/settlement-clients/starknet" }
+
 utils = { path = "crates/utils" }
 prover-client-interface = { path = "crates/prover-services/prover-client-interface" }
 gps-fact-checker = { path = "crates/prover-services/gps-fact-checker" }
