fix : tests fix proving worker

--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -45,6 +45,7 @@ tracing-subscriber = { workspace = true, features = ["env-filter"] }
 url = { workspace = true }
 utils = { workspace = true }
 uuid = { workspace = true, features = ["v4", "serde"] }
+log = "0.4.21"
 
 [features]
 default = ["ethereum", "with_mongodb", "with_sqs"]
