feat(state_update_job): saving state

--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -41,6 +41,7 @@ starknet-settlement-client = { workspace = true }
 sharp-service = { workspace = true }
 starknet = { workspace = true }
 starknet-core = "0.9.0"
+snos = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
 tracing = { workspace = true }
