--- a/crates/settlement-clients/ethereum/Cargo.toml
+++ b/crates/settlement-clients/ethereum/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1.0.196", default-features = false, features = ["derive"] }
 tokio = { workspace = true }
 url = { workspace = true }
 utils = { workspace = true }
+snos = { workspace = true }
 
 [dev-dependencies]
 tokio-test = "*"
