feat(state_update_job):

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ SETTLEMENT_LAYER=
 ETHEREUM_PRIVATE_KEY=
 ETHEREUM_RPC_URL=
 MEMORY_PAGES_CONTRACT_ADDRESS=
+STARKNET_CORE_CONTRACT_ADDRESS=
+
+# Starknet
+STARNET_PRIVATE_KEY=
+STARKNET_RPC_URL=
+
 
 # MongoDB connection string
 MONGODB_CONNECTION_STRING
