feat(state_update_job): starknet settlement

--- a/.env.example
+++ b/.env.example
@@ -9,12 +9,14 @@ SETTLEMENT_LAYER=
 ETHEREUM_PRIVATE_KEY=
 ETHEREUM_RPC_URL=
 MEMORY_PAGES_CONTRACT_ADDRESS=
-STARKNET_CORE_CONTRACT_ADDRESS=
+STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS=
 
 # Starknet
+STARKNET_PUBLIC_KEY=
 STARNET_PRIVATE_KEY=
 STARKNET_RPC_URL=
-
+CORE_CONTRACT_ADDRESS=
+STARKNET_CAIRO_CORE_CONTRACT_ADDRESS=
 
 # MongoDB connection string
 MONGODB_CONNECTION_STRING
