--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -15,6 +15,8 @@ path = "src/main.rs"
 arc-swap = { workspace = true }
 async-std = "1.12.0"
 async-trait = { workspace = true }
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-s3 = "1.38.0"
 axum = { workspace = true, features = ["macros"] }
 axum-macros = { workspace = true }
 cairo-vm = { workspace = true }
