feat(avail-da): add env example

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ ETHEREUM_RPC_URL=
 MEMORY_PAGES_CONTRACT_ADDRESS=
 STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS=
 
+# Avail
+AVAIL_RPC_URL=
+AVAIL_PRIVATE_KEY=
+AVAIL_APP_ID=
 
 # Starknet
 STARKNET_PUBLIC_KEY=
