--- a/crates/da-clients/celestia/Cargo.toml
+++ b/crates/da-clients/celestia/Cargo.toml
@@ -17,6 +17,7 @@ jsonrpsee = { version = "0.20.0", features = [
   "macros",
 ] }
 mockall = "0.12.1"
+protobuf = "3.5.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
 rstest = { workspace = true }
 serde = { version = "1.0.196", default-features = false, features = ["derive"] }
