--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -21,6 +21,7 @@ axum = { workspace = true, features = ["macros"] }
 axum-macros = { workspace = true }
 bytes = "1.6.0"
 cairo-vm = { workspace = true }
+celestia-da-client.workspace = true
 color-eyre = { workspace = true }
 da-client-interface = { workspace = true }
 dotenvy = { workspace = true }
