--- a/crates/da-clients/celestia/Cargo.toml
+++ b/crates/da-clients/celestia/Cargo.toml
@@ -11,11 +11,7 @@ celestia-rpc = "0.2.0"
 celestia-types = "0.2.0"
 color-eyre = { workspace = true }
 da-client-interface = { workspace = true }
-jsonrpsee = { version = "0.20.0", features = [
-  "http-client",
-  "ws-client",
-  "macros",
-] }
+jsonrpsee = { version = "0.20.0", features = ["http-client"] }
 mockall = "0.12.1"
 protobuf = "3.5.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
