update: add env support for Celestia DA client

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ ETHEREUM_RPC_URL=
 MEMORY_PAGES_CONTRACT_ADDRESS=
 STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS=
 
+# Celestia DA Client
+CELESTIA_DA_RPC_URL=http://localhost:8000
+# CELESTIA_DA_AUTH_TOKEN
+CELESTIA_DA_NID=Karnot
+
+
 
 # Starknet
 STARKNET_PUBLIC_KEY=
