chore: proto added to build workflow

--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -17,6 +17,8 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
+      - uses: arduino/setup-protoc@v3
+
       - name: Build the project
         run: |
           cargo build --release --workspace
