--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ axum-macros = "0.4.1"
 color-eyre = "0.6.2"
 dotenvy = "0.15.7"
 futures = "0.3.30"
+indexmap = "2.1.0"
 mongodb = { version = "2.8.1" }
 omniqueue = { version = "0.2.0" }
 reqwest = { version = "0.11.24" }
@@ -67,9 +68,6 @@ cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", features = [
   "extensive_hints",
   "cairo-1-hints",
 ] }
-
-# Deoxys
-dc-exec = { package = "dc-exec", git = "https://github.com/akhercha/deoxys", branch = "main"}
 
 # Snos
 snos = { git = "https://github.com/keep-starknet-strange/snos", branch = "main" }
