--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -24,7 +24,6 @@ bytes = "1.6.0"
 cairo-vm = { workspace = true }
 color-eyre = { workspace = true }
 da-client-interface = { workspace = true }
-dc-exec = { workspace = true }
 dotenvy = { workspace = true }
 ethereum-da-client = { workspace = true, optional = true }
 ethereum-settlement-client = { workspace = true }
@@ -48,6 +47,7 @@ sharp-service = { workspace = true }
 snos = { workspace = true }
 starknet = { workspace = true }
 starknet_api = { workspace = true }
+indexmap = { workspace = true }
 starknet-core = "0.9.0"
 starknet-settlement-client = { workspace = true }
 thiserror = { workspace = true }
