--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS=
 
 # Celestia DA Client
 CELESTIA_DA_RPC_URL=http://localhost:8000
-# CELESTIA_DA_AUTH_TOKEN
 CELESTIA_DA_NID=Karnot
-
+# Optional :
+CELESTIA_DA_AUTH_TOKEN=
 
 
 # Starknet
