--- a/crates/settlement-clients/settlement-client-interface/Cargo.toml
+++ b/crates/settlement-clients/settlement-client-interface/Cargo.toml
@@ -9,6 +9,7 @@ authors.workspace = true
 [dependencies]
 async-trait = { workspace = true }
 axum = { workspace = true }
+c-kzg = { workspace = true }
 color-eyre = { workspace = true }
 mockall = "0.12.1"
 starknet = { workspace = true }
