--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ futures = "0.3.30"
 indexmap = "2.1.0"
 mongodb = { version = "2.8.1" }
 omniqueue = { version = "0.2.0" }
-reqwest = { version = "0.11.24" }
+reqwest = { version = "0.12", features = ["json"] }
 rstest = "0.18.2"
 serde = { version = "1.0.197" }
 serde_json = "1.0.114"
