--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,15 +28,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.x"
-
-      - name: Install dependencies
-        run: |
-          pip install awscli-local
-
       # selecting a toolchain either by action or manual `rustup` calls should happen
       # before the plugin, as the cache uses the current rustc version as its cache key
       - run: rustup show
@@ -49,26 +40,23 @@ jobs:
           cargo llvm-cov clean --workspace
 
       - name: Run llvm-cov
-        env:
-          AWS_ACCESS_KEY_ID: "AWS_ACCESS_KEY_ID"
-          AWS_SECRET_ACCESS_KEY: "AWS_SECRET_ACCESS_KEY"
-          AWS_S3_BUCKET_NAME: "madara-orchestrator-test-bucket"
-          AWS_S3_BUCKET_REGION: "us-east-1"
-          AWS_ENDPOINT_URL: "http://localhost.localstack.cloud:4566"
-          MADARA_RPC_URL: "http://localhost:3000"
-          ETHEREUM_RPC_URL: "http://localhost:3001"
-          MEMORY_PAGES_CONTRACT_ADDRESS: "0x000000000000000000000000000000000001dead"
-          PRIVATE_KEY: "0xdead"
-          ETHEREUM_PRIVATE_KEY: "0x000000000000000000000000000000000000000000000000000000000000beef"
-          STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS: "0x000000000000000000000000000000000002dead"
-          DA_LAYER: "ethereum"
-          PROVER_SERVICE: "sharp"
-          SETTLEMENT_LAYER: "ethereum"
-          DATA_STORAGE: "s3"
-          MONGODB_CONNECTION_STRING: "mongodb://localhost:27017"
         run: |
-          awslocal s3api create-bucket --bucket madara-orchestrator-test-bucket
-          awslocal s3 ls
+          echo 'AWS_ACCESS_KEY_ID="AWS_ACCESS_KEY_ID"' >> .env.test
+          echo 'AWS_SECRET_ACCESS_KEY="AWS_SECRET_ACCESS_KEY"' >> .env.test
+          echo 'AWS_S3_BUCKET_NAME="madara-orchestrator-test-bucket"' >> .env.test
+          echo 'AWS_S3_BUCKET_REGION="us-east-1"' >> .env.test
+          echo 'AWS_ENDPOINT_URL="http://localhost.localstack.cloud:4566"' >> .env.test
+          echo 'MADARA_RPC_URL="http://localhost:3000"' >> .env.test
+          echo 'ETHEREUM_RPC_URL="http://localhost:3001"' >> .env.test
+          echo 'MEMORY_PAGES_CONTRACT_ADDRESS="0x000000000000000000000000000000000001dead"' >> .env.test
+          echo 'PRIVATE_KEY="0xdead"' >> .env.test
+          echo 'ETHEREUM_PRIVATE_KEY="0x000000000000000000000000000000000000000000000000000000000000beef"' >> .env.test
+          echo 'STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS="0x000000000000000000000000000000000002dead"' >> .env.test
+          echo 'DA_LAYER="ethereum"' >> .env.test
+          echo 'PROVER_SERVICE="sharp"' >> .env.test
+          echo 'SETTLEMENT_LAYER="ethereum"' >> .env.test
+          echo 'DATA_STORAGE="s3"' >> .env.test
+          echo 'MONGODB_CONNECTION_STRING="mongodb://localhost:27017"' >> .env.test
           cargo llvm-cov nextest --release --lcov --output-path lcov.info --test-threads=1
 
       - name: Upload coverage to codecov.io
