--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -16,6 +16,7 @@ alloy = { workspace = true }
 arc-swap = { workspace = true }
 assert_matches = "1.5.0"
 async-std = "1.12.0"
+anyhow = "1.0"
 async-trait = { workspace = true }
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = { version = "1.38.0", features = ["behavior-version-latest"] }
