--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -15,7 +15,7 @@ jobs:
         image: localstack/localstack
         env:
           SERVICES: s3, sqs
-          DEFAULT_REGION: us-east-1
+          DEFAULT_REGION: ap-south-1
           AWS_ACCESS_KEY_ID: "AWS_ACCESS_KEY_ID"
           AWS_SECRET_ACCESS_KEY: "AWS_SECRET_ACCESS_KEY"
         ports:
