feat : updated region

--- a/.env.test
+++ b/.env.test
@@ -3,7 +3,7 @@
 AWS_ACCESS_KEY_ID="AWS_ACCESS_KEY_ID"
 AWS_SECRET_ACCESS_KEY="AWS_SECRET_ACCESS_KEY"
 AWS_S3_BUCKET_NAME="madara-orchestrator-test-bucket"
-AWS_S3_BUCKET_REGION="ap-south-1"
+AWS_S3_BUCKET_REGION="us-east-1"
 AWS_ENDPOINT_URL="http://localhost.localstack.cloud:4566"
 
 ##### On chain config #####
