--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,8 @@ MONGODB_CONNECTION_STRING=
 # SQS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+SQS_JOB_PROCESSING_QUEUE_URL=
+SQS_JOB_VERIFICATION_QUEUE_URL=
 
 # S3
 AWS_S3_BUCKET_NAME=
