--- a/.env.example
+++ b/.env.example
@@ -21,9 +21,12 @@ STARKNET_CAIRO_CORE_CONTRACT_ADDRESS=
 # MongoDB connection string
 MONGODB_CONNECTION_STRING=
 
-# SQS
+# AWS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
+
+# SQS
 SQS_JOB_PROCESSING_QUEUE_URL=
 SQS_JOB_VERIFICATION_QUEUE_URL=
 
