update: working test case

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,7 @@ SQS_JOB_VERIFICATION_QUEUE_URL=
 # S3
 AWS_S3_BUCKET_NAME=
 AWS_S3_BUCKET_REGION=
+
+# Ethereum Settlement
+DEFAULT_SETTLEMENT_CLIENT_RPC=
+DEFAULT_L1_CORE_CONTRACT_ADDRESS=
