--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ AWS_SECRET_ACCESS_KEY=
 # S3
 AWS_S3_BUCKET_NAME=
 AWS_S3_BUCKET_REGION=
+
+# Ethereum Settlement
+DEFAULT_SETTLEMENT_CLIENT_RPC=
+DEFAULT_L1_CORE_CONTRACT_ADDRESS=
