--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -42,15 +42,11 @@ jobs:
       - name: Run llvm-cov
         run: |
           cd crates/settlement-clients/ethereum
-          cargo llvm-cov nextest --release --json --output-path coverage.json --test-threads=1 test_da_word
+          cargo llvm-cov nextest --release --lcov --output-path lcov --test-threads=1 test_da_word
 
-      - name: Upload coverage to codecov.io
-        uses: codecov/codecov-action@v4
-        with:
-          files: crates/settlement-clients/ethereum/coverage.json
-          fail_ci_if_error: true
-          verbose: true
-          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+        files: crates/settlement-clients/ethereum/lcov
 
       - uses: colpal/actions-clean@v1
         if: ${{ always() }} # To ensure this step runs even when earlier steps fail
