--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -46,7 +46,8 @@ jobs:
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
-        files: crates/settlement-clients/ethereum/lcov
+        with:
+          files: crates/settlement-clients/ethereum/lcov
 
       - uses: colpal/actions-clean@v1
         if: ${{ always() }} # To ensure this step runs even when earlier steps fail
