--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -39,6 +39,7 @@ jobs:
         uses: coverallsapp/github-action@v2
         with:
           files: crates/settlement-clients/ethereum/report.lcov
+          debug: true
 
       - uses: colpal/actions-clean@v1
         if: ${{ always() }} # To ensure this step runs even when earlier steps fail
