--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           files: crates/settlement-clients/ethereum/report.lcov
           debug: true
+          allow-empty: true
 
       - uses: colpal/actions-clean@v1
         if: ${{ always() }} # To ensure this step runs even when earlier steps fail
