--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,6 +9,19 @@ on:
     branches: [ main ]
 
 jobs:
+  linters:
+    name: Run linters
+    uses: ./.github/workflows/linters.yml
+
+  rust_build:
+    name: Build Rust project
+    uses: ./.github/workflows/rust-build.yml
+
+  linters_cargo:
+    name: Run Cargo linters
+    uses: ./.github/workflows/linters-cargo.yml
+
   coverage:
     name: Run coverage
     uses: ./.github/workflows/coverage.yml
+    needs: rust_build
