--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ dotenvy = "0.15.7"
 futures = "0.3.30"
 mongodb = { version = "2.8.1" }
 omniqueue = { version = "0.2.0" }
-reqwest = { version = "0.11.24" }
+reqwest = { version = "0.11.24", features = ["rustls-tls"] }
 rstest = "0.18.2"
 serde = { version = "1.0.197" }
 serde_json = "1.0.114"
