update: dummy contract and impersonation tests ready

--- a/crates/settlement-clients/ethereum/Cargo.toml
+++ b/crates/settlement-clients/ethereum/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 alloy = { workspace = true, features = ["full", "node-bindings" ] }
 alloy-primitives = { version = "0.7.7", default-features = false }
 async-trait = { workspace = true }
+lazy_static = "1.4.0"
 c-kzg = "1.0.0"
 color-eyre = { workspace = true }
 dotenv = "0.15"
