update: PR reviews fixes

--- a/.env.test
+++ b/.env.test
@@ -30,5 +30,5 @@ MONGODB_CONNECTION_STRING="mongodb://localhost:27017"
 # Ethereum Settlement
 DEFAULT_SETTLEMENT_CLIENT_RPC="http://localhost:3000"
 DEFAULT_L1_CORE_CONTRACT_ADDRESS="0xc662c410C0ECf747543f5bA90660f6ABeBD9C8c4"
-TEST_IMPERSONATE_OPERATOR="1"
+SHOULD_IMPERSONATE_ACCOUNT="true"
 TEST_DUMMY_CONTRACT_ADDRESS="0xE5b6F5e695BA6E4aeD92B68c4CC8Df1160D69A81"
