--- a/crates/prover-services/sharp-service/Cargo.toml
+++ b/crates/prover-services/sharp-service/Cargo.toml
@@ -11,6 +11,7 @@ cairo-vm.workspace = true
 dotenvy.workspace = true
 gps-fact-checker.workspace = true
 hex.workspace = true
+httpmock.workspace = true
 lazy_static.workspace = true
 prover-client-interface.workspace = true
 reqwest.workspace = true
@@ -19,6 +20,7 @@ serde.workspace = true
 serde_json.workspace = true
 snos.workspace = true
 thiserror.workspace = true
+tokio.workspace = true
 tracing.workspace = true
 url.workspace = true
 utils.workspace = true
