--- a/.env.test
+++ b/.env.test
@@ -25,7 +25,7 @@ PROVER_SERVICE="sharp"
 SETTLEMENT_LAYER="ethereum"
 DATA_STORAGE="s3"
 MONGODB_CONNECTION_STRING="mongodb://localhost:27017"
-
+DEFAULT_SETTLEMENT_CLIENT_RPC="http://localhost:3000"
 
 # Ethereum Settlement
 DEFAULT_L1_CORE_CONTRACT_ADDRESS="0xc662c410C0ECf747543f5bA90660f6ABeBD9C8c4"
